--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "babel-node": "babel-node",
     "nodemon": "nodemon",
     "develop": "nodemon --exec npm run babel-node -- bin/phonebook",
-    "test": "mocha --compilers js:babel-core/register --colors",
+    "test": "jest --colors",
     "gulp": "gulp",
     "eslint": "eslint",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
@@ -24,23 +24,21 @@
   },
   "homepage": "https://github.com/hexlet-components/js-servers#readme",
   "dependencies": {
-    "debug": "*"
+    "debug": "^4.3.1"
   },
   "devDependencies": {
-    "babel-polyfill": "*",
-    "axios": "*",
-    "nodemon": "*",
-    "mocha": "*",
-    "babel-cli": "*",
-    "babel-core": "*",
-    "babel-preset-latest": "*",
-    "babel-preset-stage-0": "*",
-    "eslint": "*",
-    "babel-eslint": "*",
-    "babel-plugin-syntax-flow": "*",
-    "babel-plugin-transform-flow-strip-types": "*",
-    "eslint-config-airbnb": "*",
-    "eslint-plugin-import": "^1.8.0",
-    "eslint-plugin-flowtype": "*"
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/node": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "axios": "^0.21.1",
+    "babel-jest": "^27.0.2",
+    "nodemon": "^2.0.7",
+    "eslint": "^7.28.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.3.6",
+    "jest": "^27.0.3",
+    "jest-cli": "^27.0.3"
   }
 }
